refactor: More JDK 17 related polishing.
nocl